# stock_pdf_reader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: stocks.json
src/db/: database.py  test_database.py
src/pdf_parser/: parser.py  test_parser.py
src/reports/: report_model.py  report_service.py  test_report_service.py
src/stocks/: stock_model.py  stock_service.py  test_stock_model.py  test_stocks_service.py
tests/: testcov.py
